--- a/HTML/category.html
+++ b/HTML/category.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>올리브영</title>
+  <script src="https://kit.fontawesome.com/12b1e7f9cb.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/CSS/OLIVEYOUNG.css">
+  <link rel="stylesheet" href="/CSS/category/category.css">
 </head>
+
 <body>
-  
+  <div id="root">
+    <div class="group">
+      <header>
+        <!--햄버거 바 메뉴-->
+        <div class="hamberger-bar">
+          <div>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="hamberger-menu">
+          <div>
+            <ul></ul>
+            <ul></ul>
+            <ul></ul>
+          </div>
+        </div>
+        <!--로그인 헤더 메뉴-->
+        <ul>
+          <li>로그인</li>
+          <li>회원가입</li>
+          <li>장바구니</li>
+          <li>배송조회</li>
+        </ul>
+      </header>
+
+      <a href="/OLIVEYOUNG.html"><div class="logo"><img src="/IMG/카테고리/OLIVEYOUNG.png" alt=""></div></a>
+
+      <div class="slide slide_wrap">
+        <div class="slide_item">1</div>
+        <div class="slide_item">2</div>
+        <div class="slide_item">3</div>
+        <div class="slide_item">4</div>
+        <div class="slide_prev_button slide_button">◀</div>
+        <div class="slide_next_button slide_button">▶</div>
+        <ul class="slide_pagination"></ul>
+      </div>
+
+
+      <div class="chart chart-group">
+
+      </div>
+  </div>
 </body>
+<script src="/JS/index.js"></script>
+<script src="/JS/category.js"></script>
 </html>
