--- a/OLIVEYOUNG.html
+++ b/OLIVEYOUNG.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>올리브영</title>
   <script src="https://kit.fontawesome.com/12b1e7f9cb.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./CSS/OLIVEYOUNG.css">
+  <link rel="stylesheet" href="/CSS/OLIVEYOUNG.css">
 </head>
 
 <body>
@@ -71,5 +71,4 @@
   </div>
 </body>
 <script src="./JS/index.js"></script>
-<script src="./JS/haberger.js"></script>
 </html>
