--- a/OLIVEYOUNG.html
+++ b/OLIVEYOUNG.html
@@ -26,11 +26,64 @@
         </div>
 
         <div class="hamberger-menu">
-        <div>
-          <ul></ul>
-          <ul></ul>
-          <ul></ul>
-        </div>
+          <div>
+            <ul>
+              <!--로고 이미지-->
+              <div class="logoimg"> <img src="./IMG/카테고리/OLIVEYOUNG.png" alt=""></div>
+              <div class="personal-information">
+                <button>로그인</button>
+                <button>회원가입</button>
+              </div>
+              <div class="sns-community">
+                <button class="instagram">인스타그램</button>
+                <button class="youtube">유튜브</button>
+              </div>
+            </ul>
+            <ul>
+              <div class="mypage size">
+                <div>
+                  <div><i class="fa-sharp fa-solid fa-user fa-2x"></i></div>
+                  <div>마이페이지</div>
+                </div>
+                <div>
+                  <div><i class="fa-sharp fa-solid fa-clock fa-2x"></i></div>
+                  <div>최근 본 상품</div>
+                </div>
+                <div>
+                  <div><i class="fa-sharp fa-solid fa-rocket fa-2x"></i></div>
+                  <div>주문조회</div>
+                </div>
+                <div>
+                  <div><i class="fa-sharp fa-solid fa-heart fa-2x"></i></div>
+                  <div>관심상품</div>
+                </div>
+              </div>
+              <div class="mypage size">
+                <div>
+                  <div><i class="fa-sharp fa-solid fa-microphone-lines fa-2x"></i></div>
+                  <div>공지사항</div>
+                </div>
+                <div>
+                  <div><i class="fa-sharp fa-solid fa-pen fa-2x"></i></div>
+                  <div>구매후기</div>
+                </div>
+                <div>
+                  <div><i class="fa-sharp fa-solid fa-comments fa-2x"></i></div>
+                  <div>구매문의</div>
+                </div>
+                <div>
+                  <div><i class="fa-sharp fa-solid fa-laptop fa-2x"></i></div>
+                  <div>PC-VER</div>
+                </div>
+              </div>
+            </ul>
+            <ul class="category">
+              <div> 
+                <button> 카테고리</button>
+                <button> 커뮤니티</button></div>
+              <div></div>
+            </ul>
+          </div>
         </div>
         <!--로그인 헤더 메뉴-->
         <ul>
@@ -43,7 +96,7 @@
       </header>
       <div class="logo-img"><img src="./IMG/카테고리/OLIVEYOUNG.png" alt=""></div>
 
-      <div class="input" >
+      <div class="input">
         <div>
           <input type="text" placeholder="오늘의 신상 알아보기" onkeypress="search()">
           <img src="./IMG/Group 78.png" alt="돋보기">
@@ -71,4 +124,5 @@
   </div>
 </body>
 <script src="./JS/index.js"></script>
+
 </html>
